# carrot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  a.sh  build.sh  client.c  makefile
.github/: dependabot.yml
.github/workflows/: cmake-multi-platform.yml
lib/: avl.h  hashtable.h  heap.h  list.h  utils.h  zest.h
src/: Zset.c  avl.c  hashtable.c  heap.c  list.c  server.c  utils.c
